Fix spacing for stats section of My Account page

--- a/app/assets/stylesheets/app/columns.css.scss
+++ b/app/assets/stylesheets/app/columns.css.scss
@@ -112,7 +112,7 @@
     text-transform:uppercase;
   }
 
-  .activity {
+  .stats-section {
     margin:40px 0;
     /*width:640px;*/
 
